tests/sksl/errors/GrMainParameterWrongType.fp
half4 main(float3 coords) {
    return half4(0);
}
